objects/ContractDrivers__c.object
<CustomObject>
    <fields>
        <fullName>DOC_Data_Configuration__c</fullName>
        <label>DOC Data Configuration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOC_Data_Licensing__c</fullName>
        <label>DOC Data Licensing</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOC_Library_Configuration__c</fullName>
        <label>DOC Library Configuration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOC_Library_Licensing__c</fullName>
        <label>DOC Library Licensing</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>GAAP Multiple Element Allocation</description>
    <label>Contract Drivers</label>
    <listViews>
        <fullName>Landscape_View</fullName>
        <columns>NAME</columns>
        <columns>DOC_Data_Configuration__c</columns>
        <columns>DOC_Data_Licensing__c</columns>
        <columns>DOC_Library_Configuration__c</columns>
        <columns>DOC_Library_Licensing__c</columns>
        <columns>Services__c</columns>
        <columns>Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <label>Landscape View</label>
    </listViews>
</CustomObject>